Block: Fix carousel width & whitespace issues (#12564)

--- a/packages/stories-block/src/css/views/circles.css
+++ b/packages/stories-block/src/css/views/circles.css
@@ -10,7 +10,6 @@
 }
 
 .web-stories-list.is-view-type-circles .glider-track {
-  justify-content: center;
   margin: 0 auto;
 }
 
